--- a/app/src/main/res/layout/list_tasks.xml
+++ b/app/src/main/res/layout/list_tasks.xml
@@ -1,98 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"  android:layout_height="match_parent"
-    tools:ignore="ContentDescription, UselessParent,UseCompoundDrawables,HardcodedText">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
 
-    <RelativeLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp">
-
-        <ImageView
-            android:id="@+id/delete"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/ic_hapus"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="16dp" />
-
-        <LinearLayout
-            android:id="@+id/titleRow"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            tools:ignore="UseCompoundDrawables">
-
-
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="8dp"
-                android:text="Judul"
-                android:textAllCaps="false"
-                android:textSize="18sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/dateRow"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/titleRow"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="8dp"
-                android:background="@drawable/kalender"
-                android:layout_marginRight="16dp" />
-
-            <TextView
-                android:id="@+id/dateTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="8dp"
-                android:text="Tanggal"
-                android:textAllCaps="true"
-                android:textSize="12sp" />
-
-        </LinearLayout>
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        app:cardCornerRadius="15dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/dateRow"
-            android:orientation="horizontal"
-            tools:ignore="UseCompoundDrawables">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="16dp"
-                android:background="@drawable/jam"
-                tools:ignore="ContentDescription"
-                android:layout_marginRight="16dp" />
+            android:layout_margin="10dp"
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/timeTitle"
+                android:id="@+id/tv_Tugas"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="16dp"
-                android:text="Waktu"
-                android:textAllCaps="true"
-                android:textSize="12sp" />
+                android:text="Tugas"/>
 
-        </LinearLayout>
-    </RelativeLayout>
-</RelativeLayout>
+            <TextView
+                android:id="@+id/tv_Deskripsi"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Deskripsi"/>
+
+            <TextView
+                android:id="@+id/tv_Tanggal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Tenggat"/>
+
+            <TextView
+                android:id="@+id/tv_Waktu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Waktu"/>
+    </LinearLayout>
+    </androidx.cardview.widget.CardView>
+</LinearLayout>
